--- a/asset/main.css
+++ b/asset/main.css
@@ -1,21 +1,39 @@
-.main-table {
-    background-color: lightcoral;
+* {
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+}
 
+.page-header {
+    background-color: lightcoral;
+}
+
+.page-header h1 {
+    text-align: center;
+    padding: 15px;
+}
+
+.search{
+    text-align: center;
+    padding: 15px;
+    font-size: 22px;
+    
+}
+
+.search input {
+    outline: none;
+    padding: 10px;
+    width: 25%;
+    border: 0;
 }
 
 #table {
     margin: auto;
 }
 
-#header {
-    padding: 15px;
+#add-form input {
+    outline: none;
 }
-
-#table-load {
-    text-align: center;
-
-}
-
 .table-body {
     background-color: aquamarine;
     padding: 25px;
@@ -31,6 +49,14 @@
 
 .table-head {
     background-color: lightblue;
+}
+
+.table-head th {
+    padding: 10px;
+}
+
+.table-middle td {
+    padding: 10px;
 }
 
 .table-middle {
